# icFlow4

./: CMakeLists.txt  README.md
bvh/: bvhn.cpp  bvhn.h  kdop8.cpp  kdop8.h
geometry/: edge.cpp  edge.h  element.cpp  element.h  floevisualization.cpp  floevisualization.h  geometry.cpp  geometry.h  geometry_stable.cpp  mesh.cpp  mesh.h  meshfragment.cpp  meshfragment.h  model.cpp  model.h  node.cpp  node.h  solid3d.cpp  solid3d.h
gui/: backgroundworker.cpp  backgroundworker.h  main.cpp  main_test.cpp
gui/interactor/: SpecialSelector2D.cpp  SpecialSelector2D.h
gui/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
simulation/: SimpleObjectPool.h  equationofmotionsolver.cpp  equationofmotionsolver.h  frameinfo.h  interaction.cpp  interaction.h  linearsystem.cpp  linearsystem.h  model.cpp  model.h  modelcontroller.cpp  modelcontroller.h  modelcontrollerinterface.cpp  modelcontrollerinterface.h  parameters_sim.h  serializer.cpp  serializer.h
